--- a/hw1/index.html
+++ b/hw1/index.html
@@ -281,5 +281,6 @@
         <p>This app uses the distilbert-base-uncased-finetuned-sst-2-english model from Hugging Face</p>
     </footer>
 
-    <script type="module" src="app.js"></script></body>
+    <script src="app.js"></script>
+</body>
 </html>
